# nix-hyperfine

./: .gitignore  LICENSE  README.md  flake.nix  formatter.nix  nix_hyperfine.py  pyproject.toml
checks/: tests.nix
devShells/: default.nix
examples/: demo.sh
nix_hyperfine/: __init__.py  __main__.py  benchmark.py  colors.py  command.py  dependencies.py  exceptions.py  parser.py  specs.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_cli.py  test_command.py  test_git_revision.py  test_nix_hyperfine.py  test_parser.py  test_specs.py
